--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project(bittorrent-starter-cpp)
 file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)
 
 set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
-
+set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++ -static-libgcc")
 add_executable(bittorrent ${SOURCE_FILES})
